Fri Apr 13 13:40:03 BST 2007  Olly Betts <olly@survex.com>

	* python/extra.i: Only read wdf for termlists which actually support
	  it.  This was failing for alltermslist in a debug build, and now
	  fails with InvalidOperationError in all builds.

Thu Apr 12 17:56:05 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xapian.i: Parse the visibility support header file, so we don't
	  get errors when we %include other xapian headers.  Fixes error
	  reported by python/except.i, which has a line saying
	  %include "xapian/error.h"

Wed Apr 11 13:42:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Add the custom test failure messages back,
	  and revert changes to tests which I made (which will be going
	  into a custom python-specific test file in time).  When a test
	  fails, display context of the test failure together with the
	  Xapian version and platform information.

Wed Apr 11 10:30:46 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Replace cut-and-pasted test checking code
	  with functions, to simplify tests.

Tue Apr 10 20:10:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py: Remove check for version Python version 2.2
	  before running iterator tests - we no longer support earlier
	  versions of Python.

Sun Apr 08 19:11:05 BST 2007  Olly Betts <olly@survex.com>

	* python/docs/bindings.html: Python 2.2 is the minimum required
	  version so remove "Provided you're using Python 2.2 or newer".

Thu Apr 05 10:38:37 BST 2007  Olly Betts <olly@survex.com>

	* php/util.i: Avoid undefined behaviour in get_matching_terms().
	  This fixes the problem reported by Daniel Ménard under MSVC.

Wed Apr 04 13:30:11 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Look for jni.h in $JAVA_HOME/include and
	  $JDK_HOME/include if the respective variables are set.

Wed Apr 04 13:07:12 BST 2007  Olly Betts <olly@survex.com>
