@@ -23,6 +23,8 @@
  */
 %}
 
+%include "doccomments.i"
+
 // Use SWIG directors for Python wrappers.
 #define XAPIAN_SWIG_DIRECTORS
 
