@@ -1,3 +1,15 @@
+Fri Apr 13 16:30:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* python/doxy2swig.py.in: Add script to generate doccomments.i file
+	  from XML output of doxygen.  Adds much useful documentation to
+	  the python bindings (it's still quite messy, but much better than
+	  nothing).  Unfortunately, a bug in SWIG means that not all the
+	  documentation is visible - I've put a patch at
+	  http://sf.net/tracker/index.php?func=detail&aid=1700146&group_id=1645&atid=301645
+	* python/util.i: Include generated doccomments.i file.
+	* configure.ac: Add rules to generate python/doxy2swig.
+	* python/Makefile.am: Rules to generate and depend on doccomments.i
+
 Fri Apr 13 13:40:03 BST 2007  Olly Betts <olly@survex.com>
 
 	* python/extra.i: Only read wdf for termlists which actually support
